# Skorowidz_JIMP1

./: CMakeLists.txt  README.md  dane.3  skorowidz.c
Headers/: compare.h  sort.h
Skorowidz/: LICENSE  README.md
Skorowidz/10X/Headers/: compare.h  kw_t.h  sort.h  test.h
Skorowidz/10X/Sources/: compare.c  fifo_t.c  kw_t.c  load_file.c  sort.c
Skorowidz/10X/Unit Tests/: compare_test.c  fifo_t.c  kw_t_test.c  test.c
Skorowidz/Skorowidz.xcodeproj/: project.pbxproj
Skorowidz/Skorowidz.xcodeproj/project.xcworkspace/xcuserdata/oskar.xcuserdatad/: UserInterfaceState.xcuserstate
Skorowidz/Skorowidz.xcodeproj/xcshareddata/xcschemes/: Skorowidz.xcscheme
Skorowidz/Skorowidz.xcodeproj/xcuserdata/oskar.xcuserdatad/xcschemes/: xcschememanagement.plist
Skorowidz/Skorowidz/10X/Headers/: compare.h  fifo_t.h  kw_t.h  load_file.h  search.h  sort.h
Skorowidz/Skorowidz/10X/Source/: compare.c  fifo_t.c  kw_t.c  load_file.c  search.c  sort.c  test.c
Skorowidz/Skorowidz/10X/Sources/: compare.c  fifo_t.c  kw_t.c  search.c  sort.c
Skorowidz/Skorowidz/10X/Unit Test/: compare_test.c  kw_t_test.c
Skorowidz/Skorowidz/10X/Unit Tests/: fifo_t.c  kw_t_test.c
Skorowidz/Skorowidz/Skorowidz_code/: CMakeLists.txt
Skorowidz/Skorowidz/Skorowidz_code/Headers/: compare.h  fifo_t.h  sort.h
Skorowidz/Skorowidz_JIMP1-master/: skorowidz.c
Skorowidz/Skorowidz_JIMP1-master/Skorowidz/Skorowidz/10X/Sources/: fifo_t.c  sort.c
Sources/: compare.c  fifo_t.c  search.c
